[package]
name = "rust-bbs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
service = { path = "../services" }
common = { path = "../common" }
rocket = { workspace = true }
sea-orm-rocket = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
rocket_cors = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
