[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
rocket = { workspace = true }
sea-orm-rocket = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true}
