[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "../entity" }
common = { path = "../common" }
validator = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
sea-orm-rocket = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }